--- a/server/public/index.html
+++ b/server/public/index.html
@@ -9,7 +9,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="https://checkout.stripe.com/checkout.js"></script>
+  <script src="https://js.stripe.com/v3/"></script>
+  <script type="text/javascript">
+      var stripe = Stripe('pk_test_mPTpczYYMxOv3S3O0Jj9TXQI');
+      var elements = stripe.elements();
+  </script>
 </head>
 <body>
   <app-root></app-root>
