--- a/server/public/index.html
+++ b/server/public/index.html
@@ -14,6 +14,7 @@
       var stripe = Stripe('pk_test_mPTpczYYMxOv3S3O0Jj9TXQI');
       var elements = stripe.elements();
   </script>
+  <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyAJRYSde0Y5_YiQrUhUzHtWvrODL0Zv2jQ"></script>
 </head>
 <body>
   <app-root></app-root>
